--- a/use-data/package.json
+++ b/use-data/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "gatsby": "^5.10.0",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.10.0",
     "gatsby-plugin-postcss": "^6.10.0",
